writing-a-c-compiler-tests/tests/chapter_9/valid/no_arguments/precedence.c
int three(void) {
    return 3;
}

int main(void) {
 
    return !three();
}