writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/assign_to_fun_call.c
int x(void);

int main(void) {
 
    x() = 1;
    return 0;
}